Remove filter parameter from ListContainers
